# nymeakiosk-ultimate-system

./: .gitignore  AUDIT_SUMMARY.md  CONTRIBUTING.md  LICENSE  MODERNIZATION_SUMMARY.md  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  lint.yml  tests.yml
docs/: DOCUMENTATION.md  INSTALLATION.md
nymeakiosk-rpi5/: install-all.sh
nymeakiosk-rpi5/RPI_nymea_skripty/: Chytrá meteorologická stanice.py  Docker konfigurace.yaml  Hlavní konfigurační soubor.yaml  Implementace projektového managementu.py  Konfigurace projektu.yaml  Systematické vyhodnocování studentských prací.py  Testovací soubor.py  example.py
nymeakiosk-rpi5/RPI_nymea_skripty/Kompletní konfigurační skript/: Kompletní konfigurační skript.sh
nymeakiosk-rpi5/RPI_nymea_skripty/docs/: Kompletní konfigurační skript.md  Přístup k nymea webovému rozhraní.md  Struktura souborů a adresářů.md  Verze dokumentace_2.0_září 2025.md  Výchozí přihlašovací údaje.md
nymeakiosk-rpi5/RPI_nymea_skripty/guide/: Průvodce pro učitele.md  Příprava Raspberry Pi 5.sh  Spuštění inicializačního skriptu.sh  Stažení a příprava obrazu nymea-kiosk.sh  Stažení_instalace_instalačního_skriptu.sh  Výchozí přihlašovací údaje.sh
nymeakiosk-rpi5/RPI_nymea_skripty/instal skripty/: Hlavní instalační skript.sh  Instalace systému.sh  Stažení vzdělávacího systému.sh
nymeakiosk-rpi5/RPI_nymea_skripty/nastaveni/: Aktualizace systému.sh  Diagnostika problémů.sh  Instalace monitorovacích nástrojů.sh  Kalibrace dotykového displeje.sh  Konfigurace systému.sh  Konfigurace sítě a připojení.sh  Konfigurace časového pásma a lokalizace.sh  Monitorování výkonu.sh  Nastavení kiosk režimu.sh  Nastavení monitorovacích nástrojů.sh  Nastavení notifikací.sh  Nastavení otáčení obrazovky.sh  Nastavení vzdáleného přístupu.sh  Nastavení zálohování.sh  Nastavení zálohování2.sh  Nastavení zálohování3.sh  Optimalizace souborového systému.sh  Připojení k síti.sh  Spuštění kontejnerů.sh  (+8 more)
nymeakiosk-rpi5/docs/: QUICKSTART.md  TROUBLESHOOTING.md
nymeakiosk-rpi5/scripts/: configure-backup.sh  setup-kiosk.sh
scripts/: export-rules.sh  import-rules.sh  install-nodered.sh  install-plugins.sh  restore-backup.sh
src/config/: main-config.yaml
src/python/: __init__.py  config_manager.py  project_manager.py  utils.py
src/scripts/: backup.sh  install-all.sh  setup-kiosk.sh
tests/unit/: test_config_manager.py  test_project_manager.py
(+24 files in other folders)
